# SLATEC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVIATIONS.md  IBM360_TEST_RESULTS.md  LICENSE  README.md  TESTING.md  TEST_RESULTS.md  bugs_found.md  fpm.toml
.claude/: settings.json
src/modern/: CMakeLists.txt  slatec.f90
src/modern/approximation/: approximation.f90  dbocls.inc  dbols.inc  dbolsm.inc  dlsei.f90  dpolft.inc  dwnlit.f90  dwnlsm.f90  lsei.inc  polfit.inc  sbocls.inc  sbols.inc  sbolsm.inc  wnlit.inc  wnlsm.f90
src/modern/approximation/minpack/: dcov.f90  dcov.inc  dnls1.inc  dnsq.inc  dnsqe.inc  scov.f90  scov.inc  snls1.inc  snsq.inc  snsqe.inc
src/modern/data_handling/: data_handling.f90  dpsort.f90  dpsort.inc  dsort.inc  hpsort.f90  hpsort.inc  ipsort.f90  ipsort.inc  isort.inc  spsort.f90  spsort.inc  ssort.inc
src/modern/diff_integ/: avint.f90  davint.inc  dgaus8.f90  diff_integ.f90  dppgq8.f90  dqnc79.f90  gaus8.f90  ppgq8.inc  qnc79.f90
src/modern/diff_integ/quadpack/: dqagie.inc  dqagpe.inc  dqagse.f90  dqawfe.f90  dqawoe.inc  dqc25f.inc  dqelg.f90  dqmomo.f90  dqpsrt.inc  qagie.inc  qagpe.inc  qagse.f90  qawfe.f90  qawoe.inc  qc25f.inc  qelg.f90  qmomo.inc  qpsrt.inc
src/modern/diff_integ_eq/: diff_integ_eq.f90
src/modern/diff_integ_eq/bvsup/: bvsup.inc  cscale.f90  dbvsup.inc  dcscal.inc  dlssud.f90  dmgsbv.f90  dreort.f90  drkfab.f90  lssods.f90  lssuds.inc  mgsbv.inc  reort.inc  rkfab.inc
src/modern/diff_integ_eq/dassl/: ddaini.f90  ddassl.f90  ddastp.f90  sdaini.f90  sdassl.f90  sdastp.f90
src/modern/diff_integ_eq/depac/: ddes.f90  ddes.inc  derkfs.inc  des.f90  des.inc  dhstrt.inc  dlsod.f90  dpjac.f90  drkfs.f90  drkfs.inc  dslvs.inc  dsteps.f90  dstod.inc  hstart.f90  lsod.f90  lsod.inc  pjac.inc  slvs.f90  slvs.inc  steps.f90  steps.inc  stod.f90
src/modern/diff_integ_eq/fishpack/: bcrh.inc  blktr1.f90  bsrh.inc  cblkt1.f90  cblkt1.inc  ccmpb.f90  cmgnbn.inc  cmposd.inc  cmposn.inc  compb.inc  cpadd.inc  cproc.f90  cprocp.f90  cprod.f90  cprodp.inc  genbun.inc  hstcrt.f90  hstcyl.f90  hstplr.inc  hstssp.f90  hw3crt.inc  hwscrt.inc  hwscyl.f90  hwsplr.f90  hwsss1.f90  pois3d.f90  poisd2.inc  poisn2.inc  poistg.inc  pos3d1.f90  pos3d1.inc  postg2.f90  ppadd.inc  proc.inc  procp.inc  prod.inc  prodp.inc  spelip.f90  spelip.inc  tevlc.inc  (+1 more)
src/modern/diff_integ_eq/sdrive/: cdcor.inc  cdntl.inc  cdriv3.f90  cdriv3.inc  cdstp.f90  cdzro.f90  ddcor.inc  ddntl.inc  ddriv3.f90  ddriv3.inc  ddstp.f90  ddzro.f90  sdcor.inc  sdntl.inc  sdriv3.inc  sdstp.f90  sdzro.f90
src/modern/integ_trans/: integ_trans.f90
src/modern/integ_trans/fftpack/: cffti1.f90  ezfft1.f90  rffti1.inc
src/modern/interpolation/: dplint.f90  interpolation.f90  polint.f90
src/modern/interpolation/bspline/: bint4.f90  bintk.f90  bnfac.f90  bsgq8.f90  bspev.f90  bspvn.inc  bvalu.f90  dbint4.f90  dbintk.f90  dbnfac.f90  dbsgq8.f90  dbspev.f90  dbspvn.f90  dbvalu.inc  dintrv.f90  intrv.inc
src/modern/interpolation/pchip/: chfdv.inc  chfev.inc  dchfdv.inc  dchfev.inc  dpchbs.inc  dpchcm.f90  dpchcm.inc  dpchfd.f90  dpchfd.inc  dpchfe.f90  dpchfe.inc  dpchia.f90  dpchia.inc  dpchic.f90  dpchic.inc  dpchid.f90  dpchid.inc  dpchim.f90  dpchim.inc  dpchsp.inc  dpchsw.f90  dpchsw.inc  pchbs.inc  pchcm.f90  pchcm.inc  pchfd.f90  pchfd.inc  pchfe.f90  pchfe.inc  pchfe_new.inc  pchia.f90  pchia.inc  pchic.f90  pchic.inc  pchid.f90  pchid.inc  pchim.f90  pchim.inc  pchsp.inc  pchsw.f90  (+1 more)
src/modern/linear/: blas.f90  bndsol.f90  dbndsl.f90  dhfti.f90  dllsia.f90  du11ls.f90  du11us.inc  dulsia.f90  hfti.f90  iswap.inc  lapack_external.f90  linear.f90  linpack.f90  llsia.inc  u11ls.f90  u11ls.inc  u11us.inc  ulsia.f90
src/modern/linear/dqdot/: mpadd2.inc  mpadd3.f90  mpadd3.inc  mpdivi.inc  mpmul.inc  mpmul2.inc  mpnzr.inc
src/modern/linear/linpack/: sgbsl.f90
src/modern/linear/slap/: dbhin.f90  dcgs.f90  dpigmr.f90  dsics.f90  qs2i1d.inc  qs2i1r.inc  sbhin.inc  scgs.inc  spigmr.inc  ssics.inc
src/modern/nonlin_eq/: cpzero.f90  cpzero.inc  dfzero.f90  dsoseq.inc  fzero.inc  nonlin_eq.f90  soseqs.inc
src/modern/optimization/: optimization.f90
src/modern/optimization/splp/: dpchng.f90  dpchng.inc  dpincw.inc  dplpfe.f90  dplpmn.inc  dplpmu.inc  dpnnzr.f90  la05ad.inc  la05as.inc  la05cd.inc  la05cs.inc  pchngs.f90  pchngs.inc  pnnzrs.f90  spincw.inc  splpfe.inc  splpmn.f90  splpmn.inc  splpmu.inc
src/modern/service/: service.f90
src/modern/special_functions/: asyjy.f90  asyjy.inc  besi.inc  besj.inc  besk.inc  besknu.f90  besy.inc  besynu.f90  bkias.f90  bkisr.inc  bskin.inc  cacai.inc  cairy.inc  casyi.f90  cbesh.inc  cbesk.inc  cbinu.inc  cbiry.f90  cbknu.inc  cbuni.inc  ckscl.f90  ckscl.inc  cmlri.f90  cseri.inc  cunhj.f90  cuni1.inc  cuni2.inc  cunik.f90  cunk1.inc  cunk2.inc  cuoik.inc  d9chu.f90  d9gmic.f90  d9gmic.inc  d9gmit.f90  d9gmit.inc  d9lgic.f90  d9lgic.inc  d9lgit.f90  d9lgit.inc  (+72 more)
test/: CMakeLists.txt  main.f90  test_bessel_golden.f90  test_bessel_portability.f90  test_bessel_reference.f90  test_bessel_regression.f90  test_diff_integ_eq.f90  test_diff_integ_quadpack.f90  test_specfun_bessel.f90  test_utils.f90
test/level1_regression/: README.md  test_l1_diff_integ.f90  test_l1_interpolation.f90  test_l1_linear_blas.f90  test_l1_linear_linpack.f90  test_l1_linpack_extended.f90  test_l1_special_functions.f90  test_linear_linpack.f90  test_minpack.f90
test/level2_mathematical/: README.md  test_l2_diff_integ.f90  test_l2_interpolation.f90  test_l2_linear_linpack.f90  test_l2_linpack_extended.f90  test_l2_minpack_mgh.f90  test_l2_special_functions.f90  test_linear_blas.f90
test/level3_historical/: README.md  test_l3_diff_integ.f90  test_l3_interpolation.f90  test_l3_linear_blas.f90  test_l3_linear_linpack.f90  test_l3_linpack_extended.f90  test_l3_special_functions.f90  test_minpack_ibm360.f90
test/level4_hostile/: README.md  test_l4_diff_integ.f90  test_l4_interpolation.f90  test_l4_linear_linpack.f90  test_l4_linpack_extended.f90  test_l4_special_functions.f90  test_linear_blas_hostile.f90  test_minpack_portability.f90
(+84 files in other folders)
